--- a/Test_spark.ipynb
+++ b/Test_spark.ipynb
@@ -12,13 +12,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "EwTc4FoGwbPM",
-        "outputId": "c43963d1-d7d0-4968-aa40-c1b3657450f7"
+        "outputId": "866a177a-b0f2-4eb4-9270-aacbba78b513"
       },
       "outputs": [
         {
@@ -28,13 +28,13 @@
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting pyspark\n",
             "  Downloading pyspark-3.3.1.tar.gz (281.4 MB)\n",
-            "\u001b[K     |████████████████████████████████| 281.4 MB 42 kB/s \n",
+            "\u001b[K     |████████████████████████████████| 281.4 MB 36 kB/s \n",
             "\u001b[?25hCollecting py4j==0.10.9.5\n",
             "  Downloading py4j-0.10.9.5-py2.py3-none-any.whl (199 kB)\n",
-            "\u001b[K     |████████████████████████████████| 199 kB 48.1 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 199 kB 37.4 MB/s \n",
             "\u001b[?25hBuilding wheels for collected packages: pyspark\n",
             "  Building wheel for pyspark (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pyspark: filename=pyspark-3.3.1-py2.py3-none-any.whl size=281845512 sha256=74dfcd4ec832e39bd12fb0fc11d6cd655bcdd73eb8be77efc675bdf55730ccdd\n",
+            "  Created wheel for pyspark: filename=pyspark-3.3.1-py2.py3-none-any.whl size=281845512 sha256=655543e6a760b4de742c883c84c3962d939b2bfd539e1a3b0b4b121ce82a01eb\n",
             "  Stored in directory: /root/.cache/pip/wheels/43/dc/11/ec201cd671da62fa9c5cc77078235e40722170ceba231d7598\n",
             "Successfully built pyspark\n",
             "Installing collected packages: py4j, pyspark\n",
@@ -47,6 +47,7 @@
         "from pyspark.sql import SparkSession\n",
         "from pyspark.sql import SparkSession\n",
         "from pyspark.sql.types import StructType, StructField, IntegerType, StringType, LongType\n",
+        "import math \n",
         "import pyspark.sql.functions as f\n",
         "from pyspark.sql import Window\n",
         "spark = SparkSession.builder.master(\"local[*]\") \\\n",
@@ -222,16 +223,16 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "SESSION_Allocation"
-      ],
       "metadata": {
         "id": "6Zfp-MT2izp9"
-      }
+      },
+      "source": [
+        "SESSION_Allocation"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -241,8 +242,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "+---+-------------------+-------------------+------------------+------------------+----------------+-------------------+---------------+-----+\n",
             "|idt|dtime              |prev_dtime         |session_diff_30min|session_flag_30min|session_id_30min|min_dtime          |session_id_2hrs|total|\n",
@@ -336,26 +337,37 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Fuel_theft\n"
+      ],
+      "metadata": {
+        "id": "E4AUbuyW7Mk1"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 190
+          "base_uri": "https://localhost:8080/"
         },
         "id": "ijnRcDpfnyvs",
-        "outputId": "67261a4b-4599-41e4-cff6-94d575eb8439"
+        "outputId": "93d28803-4e92-4762-97b2-dbfc8147f3fb"
       },
       "outputs": [
         {
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-9-9a938be656f1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf_30\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf_30\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwithColumn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"session_id_30min\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"session_flag_30min\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mover\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mWindow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpartitionBy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"idt\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0morderBy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"dtime\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdf_30\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtruncate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'withColumn'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+--------+-------------------+----------+--------+----+-------+\n",
+            "| trip_id|          timestamp|fuel_level|previous|diff|   flag|\n",
+            "+--------+-------------------+----------+--------+----+-------+\n",
+            "|trip_006|2020-03-28 12:18:00|    280.49|  281.74|   1|incline|\n",
+            "|trip_006|2020-03-28 12:23:00|    272.49|  280.49|   8|incline|\n",
+            "|trip_006|2020-03-28 14:53:00|    455.22|  255.22|-201|  Theft|\n",
+            "+--------+-------------------+----------+--------+----+-------+\n",
+            "\n"
           ]
         }
       ],
@@ -365,15 +377,34 @@
         "            .option(\"header\", \"true\") \\\n",
         "            .option(\"TimeStampFormat\", \"yyyy-MM-dd HH:mm\") \\\n",
         "            .option(\"inferSchema\", \"True\") \\\n",
-        "            .load(\"/content/session2.csv\")\n",
+        "            .load(\"/content/fuel.csv\")\n",
         "\n",
+        "df2=df1.withColumn(\"previous\"     ,f.lag(\"fuel_level\").over(Window.orderBy(\"timestamp\"))) \\\n",
+        "       .withColumn(\"diff\"         ,f.floor(f.col(\"previous\")-f.col(\"fuel_level\"))) \n",
+        "df2=df2.withColumn(\"flag_temp\",f.lit(\"Normal\"))\n",
         "\n",
+        "mvalue=df2.filter(f.col(\"diff\")>1).rdd.map(lambda x: x.asDict()).collect()\n",
+        "mdict ={i['previous']:i for i in mvalue}\n",
+        "Fuel_list=df2.select(\"fuel_level\").rdd.flatMap(lambda x: x).collect()\n",
         "\n",
+        "def flag_convert_fun(a,b):\n",
+        "  flag=\"Normal\"\n",
+        "  if str(a)==str(b):\n",
+        "    for i in Fuel_list:\n",
+        "      if math.floor(a-i)==1:\n",
+        "        flag=\"incline\"\n",
+        "  return flag\n",
         "\n",
+        "flag_convert=f.udf(lambda z,b:flag_convert_fun(z,b))\n",
+        "for i in mdict:\n",
+        "  df3=df2.withColumn(\"flag\",f.when((flag_convert(f.col(\"fuel_level\"),f.lit(i))==\"incline\") \\\n",
+        "                      & (f.col(\"flag_temp\")==\"Normal\"),\"incline\").otherwise(f.col(\"flag_temp\")))\n",
+        "  df2=df3.withColumn(\"flag_temp\",f.col(\"flag\"))\n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
+        "for i in mdict:\n",
+        "  df3=df2.withColumn(\"flag\",f.when((f.col(\"fuel_level\")==i)&(f.col(\"flag_temp\")==\"Normal\"),\"Theft\") \\\n",
+        "                     .otherwise(f.col(\"flag_temp\")))\n",
+        "df3.drop(f.col(\"flag_temp\")).filter(f.col(\"flag\")!=\"Normal\").show()\n",
         "\n",
         "\n",
         "\n"
@@ -383,12 +414,46 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "8z92yUS12GbK"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8z92yUS12GbK",
+        "outputId": "1d26401f-e44c-43c5-e3e0-bff6cf2f991e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'str'>\n",
+            "<class 'str'>\n"
+          ]
+        }
+      ],
       "source": [
+        "# word_freq = {'is'   : [1, 3, 4, 8, 10],\n",
+        "#              'at'   : [3, 10, 15, 7, 9],\n",
+        "#              'test' : [5, 3, 7, 8, 1],\n",
+        "#              'this' : [2, 3, 5, 6, 11],\n",
+        "#              'why'  : [10, 3, 9, 8, 12] }\n",
+        "# # Get multiple values of a key as list\n",
+        "# value_list = word_freq['at']\n",
+        "# print('Values of key \"at\" are:')\n",
+        "# print(value_list[0])\n",
+        "\n",
+        "for typ in [\"incline\",\"theft\"]:\n",
+        "   print(type(typ))\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "SQL_Test\n"
+      ],
+      "metadata": {
+        "id": "60drpsbe7Yzx"
+      }
     },
     {
       "cell_type": "code",
@@ -415,15 +480,9 @@
         }
       ],
       "source": [
-        "df=spark.read.format(\"csv\").option(\"delimiter\", \",\").option(\"header\",True).load(\"/content/fuel.csv\")\n",
-        "df1=df.withColumn('total_min',F.hour(F.col(\"timestamp\"))*60+F.minute(F.col(\"timestamp\"))).createOrReplaceTempView(\"temp1\")\n",
-        "df2=spark.sql('''\n",
-        "select trip_id,timestamp,fuel_level,LEAD(fuel_level ,1,0) \n",
-        "OVER ( ORDER BY timestamp,0) AS compare_fuel,\n",
-        "(fuel_level-LEAD(fuel_level ,1,0) \n",
-        "OVER ( ORDER BY timestamp,0)) as Diff\n",
-        "from temp1''').createOrReplaceTempView(\"temp2\")\n",
-        "df3=spark.sql('''select avg(Diff),trip_id  from temp2 group by trip_id ''').show()"
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -896,7 +955,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNFPn59s9HndJMAkLy5tBcN",
+      "mount_file_id": "1LHZijXUq7sp3ubMGNQ9sx_NAnx5W4ziM",
+      "authorship_tag": "ABX9TyMRg7FyxzCMI6vNa3K/7/y4",
       "include_colab_link": true
     },
     "kernelspec": {
